RESOLVED FIXED 53815
NotificationCenter shouldn't keep its own ScriptExecutionContext*
https://bugs.webkit.org/show_bug.cgi?id=53815
Summary NotificationCenter shouldn't keep its own ScriptExecutionContext*
Nate Chapin
Reported Friday, February 4, 2011 10:54:31 PM UTC
....it should use the one it inherits from ActiveDOMObject. No need to duplicate, especially since only ActiveDOMObject's gets cleared when the ScriptExecutionContext goes away.
Attachments
patch (5.83 KB, patch)
2011-02-04 15:07 PST, Nate Chapin
no flags
Nate Chapin
Comment 1 Friday, February 4, 2011 11:07:04 PM UTC
WebKit Commit Bot
Comment 2 Saturday, February 5, 2011 10:35:48 AM UTC
The commit-queue encountered the following flaky tests while processing attachment 81298 [details]: animations/suspend-resume-animation.html bug 48161 (author: cmarrin@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3 Saturday, February 5, 2011 10:37:30 AM UTC
Comment on attachment 81298 [details] patch Clearing flags on attachment: 81298 Committed r77738: <http://trac.webkit.org/changeset/77738>
WebKit Commit Bot
Comment 4 Saturday, February 5, 2011 10:37:34 AM UTC
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.